--- a/uber-db-default.yml
+++ b/uber-db-default.yml
@@ -5,7 +5,7 @@ text.copyright=adm clud config server
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/uber-db
 spring.datasource.username=root
 spring.datasource.password=mancilla
